public/js/components/Editor.css
/* vim:set ts=2 sw=2 sts=2 et: */

/* This Source Code Form is subject to the terms of the Mozilla Public
 * License, v. 2.0. If a copy of the MPL was not distributed with this
 * file, You can obtain one at http://mozilla.org/MPL/2.0/. */

/**
 * There's a known codemirror flex issue with chrome that this addresses.
 * BUG https://github.com/devtools-html/debugger.html/issues/63
 */
.editor-wrapper {
  display: flex;
  flex-direction: column;
  order: 2;
}

html[dir="rtl"] .editor-mount {
  direction: ltr;
}

.editor-wrapper .breakpoints {
  position: absolute;
  top: 0;
  left: 0;
}

.editor.new-breakpoint svg {
  fill: var(--theme-selection-background);
  width: 60px;
  height: 14px;
  position: absolute;
  top: 0px;
  right: -4px;
}

.editor.new-breakpoint.breakpoint-disabled svg {
  opacity: 0.3;
}

.search-bar ~ .editor-mount,
.search-bar ~ .editor-mount .CodeMirror {
  order: 2;
  height: 87vh;
}

.search-bar ~ .source-footer {
  order: 3;
}

.editor-mount,
.CodeMirror {
  order: 1;
  width: 100%;
  height: 92vh;
  background-color: var(--theme-body-background);
}

.CodeMirror-linenumber {
  font-size: 11px;
  line-height: 14px;
}

/* set the linenumber white when there is a breakpoint */
.new-breakpoint .CodeMirror-linenumber {
  color: white;
}

/* move the breakpoint below the linenumber */
.new-breakpoint .CodeMirror-gutter-elt:last-child {
  z-index: 0;
}

.editor-wrapper .CodeMirror-line {
  font-size: 11px;
  line-height: 14px;
}

.debug-line .CodeMirror-line {
  background-color: var(--breakpoint-active-color) !important;
}

/* Don't display the highlight color since the debug line
   is already highlighted */
.debug-line .CodeMirror-activeline-background {
  display: none;
}

.highlight-line .CodeMirror-line {
  animation: fade-highlight-out 1.5s normal forwards;
}

@keyframes fade-highlight-out {
  0% { background-color: var(--theme-highlight-gray); }
  100% { background-color: transparent; }
}

.welcomebox {
  width: calc(100% - 1px);

  /* Offsetting it by 30px for the sources-header area */
  height: calc(100% - 30px);
  padding: 50px 0;
  text-align: center;
  font-size: 1.25em;
  color: var(--theme-comment-alt);
  background-color: var(--theme-tab-toolbar-background);
  font-weight: lighter;
  z-index: 100;
  -moz-user-select: none;
  user-select: none;
}

